--- a/public/index.html
+++ b/public/index.html
@@ -2,56 +2,79 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Blocked</title>
-<link rel="stylesheet" href="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js">
+<title>MZZ • Access Denied</title>
+<link rel="stylesheet" href="https://unpkg.com/lucide-static/font/lucide.css">
 <style>
-body{
-  margin:0;
-  height:100vh;
-  background:linear-gradient(135deg,#000,#2a2a2a);
-  display:flex;
-  align-items:center;
-  justify-content:center;
-  font-family:system-ui,-apple-system,BlinkMacSystemFont;
-}
-.box{
-  background:linear-gradient(135deg,#0f0f0f,#1f1f1f);
-  padding:35px 40px;
-  border-radius:18px;
-  text-align:center;
-  color:#cfd2d6;
-  box-shadow:0 0 40px rgba(0,0,0,.8);
-}
-h1{
-  margin:15px 0 10px;
-  font-size:32px;
-  background:linear-gradient(135deg,#aaa,#fff,#888);
-  -webkit-background-clip:text;
-  -webkit-text-fill-color:transparent;
-}
-p{
-  opacity:.75;
-  font-size:14px;
-  line-height:1.6;
-}
-i{
-  width:48px;
-  height:48px;
-  color:#fff;
-}
+    body {
+        margin: 0;
+        height: 100vh;
+        background: linear-gradient(135deg, #000000, #1a1a1a, #ffffff);
+        background-size: 400% 400%;
+        animation: bgMove 8s ease infinite;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: "Segoe UI", system-ui, sans-serif;
+        color: white;
+    }
+
+    @keyframes bgMove {
+        0% { background-position: 0% 50%; }
+        50% { background-position: 100% 50%; }
+        100% { background-position: 0% 50%; }
+    }
+
+    .box {
+        background: rgba(0,0,0,0.75);
+        border-radius: 14px;
+        padding: 32px 36px;
+        max-width: 460px;
+        text-align: center;
+        box-shadow: 0 0 30px rgba(0,0,0,0.9);
+        border: 1px solid rgba(255,255,255,0.15);
+    }
+
+    .icon {
+        font-size: 48px;
+        margin-bottom: 12px;
+    }
+
+    h1 {
+        margin: 0 0 12px;
+        font-size: 28px;
+        letter-spacing: 1px;
+    }
+
+    p {
+        font-size: 15px;
+        line-height: 1.6;
+        opacity: 0.9;
+    }
+
+    .footer {
+        margin-top: 20px;
+        font-size: 12px;
+        opacity: 0.6;
+    }
 </style>
 </head>
-<body>
-  <div class="box">
-    <i data-lucide="shield-alert"></i>
-    <h1>STOP</h1>
-    <p>
-      You Have Been Blocked For Viewing Raw Lua Script<br>
-      Without Permission To The Owner
-    </p>
-  </div>
 
-<script src="https://unpkg.com/lucide@latest"></script>
-<script>lucide.createIcons()</script>
+<body>
+    <div class="box">
+        <div class="icon">⛔</div>
+        <h1>STOP</h1>
+        <p>
+            You are attempting to view a protected Lua loader.<br><br>
+            Direct access to raw scripts is <b>blocked</b>.
+            This endpoint is intended for <b>authorized Roblox execution only</b>.
+        </p>
+        <p>
+            If you are not the owner, leave immediately.<br>
+            Unauthorized usage may result in permanent blacklist.
+        </p>
+        <div class="footer">
+            © MZZHub • Protected Loader
+        </div>
+    </div>
 </body>
 </html>
